[package]
authors = ["Jan Walter <jan@janwalter.com>"]
edition = "2018"
name = "rs_pbrt"
version = "0.9.5"
license = "MIT OR Apache-2.0"
license-file = "LICENSE.rtf"
readme = "README.md"
repository = "https://github.com/wahn/rs_pbrt"
documentation = "https://www.rs-pbrt.org/doc/crates/rs_pbrt/index.html"
description = "Physically based rendering (PBR) with Rust"
homepage = "https://www.rs-pbrt.org"
[dependencies]
atom = "0.4.0"
atomic = "0.5.1"
blend_info = "0.2.6"
# blend_info = { path = "../blend_info" }
byteorder = "1.4.3"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.2"
hexf = "0.2.1"
image = "0.24.1"
impl_ops = "0.1.1"
lazy_static = "1.4.0"
num = "0.4.0"
num_cpus = "1.13.1"
pbr = "1.0.4"
pest = "2.1.3"
pest_derive = "2.1.0"
ply-rs = "0.1.3"
rayon = "1.5.1"
smallvec = "1.8.0"
structopt = "0.3.26"
strum = "0.24.0"
strum_macros = "0.24.0"
typed-arena = "2.0.1"

[[bin]]
name = "rs_pbrt"
path = "src/bin/rs_pbrt.rs"

[[bin]]
name = "parse_blend_file"
path = "src/bin/parse_blend_file.rs"
