[package]
authors = ["Jan Walter <jan@janwalter.com>"]
edition = "2018"
name = "rs_pbrt"
version = "0.9.8"
license = "MIT OR Apache-2.0"
# license-file = "LICENSE.rtf"
readme = "README.md"
repository = "https://github.com/wahn/rs_pbrt"
documentation = "https://www.rs-pbrt.org/doc/crates/rs_pbrt/index.html"
description = "Physically based rendering (PBR) with Rust"
homepage = "https://www.rs-pbrt.org"
categories = ["rendering::engine", "multimedia::images", "graphics", "command-line-utilities"]
keywords = ["graphics", "pathtracer", "pathtracing", "pbrt"]
[dependencies]
atom = "0.4.0"
atomic = "0.5.1"
blend_info = "0.2.9"
# blend_info = { path = "../blend_info" }
byteorder = "1.4.3"
clap = { version = "4.2.1", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-channel = "0.5.7"
hexf = "0.2.1"
image = "0.24.6"
impl_ops = "0.1.1"
lazy_static = "1.4.0"
num = "0.4.0"
num_cpus = "1.15.0"
pbr = "1.1.1"
pest = "2.5.7"
pest_derive = "2.5.7"
ply-rs = "0.1.3"
rayon = "1.7.0"
smallvec = "1.10.0"
strum = "0.24.1"
strum_macros = "0.24.3"
typed-arena = "2.0.2"

[[bin]]
name = "rs_pbrt"
path = "src/bin/rs_pbrt.rs"

[[bin]]
name = "parse_blend_file"
path = "src/bin/parse_blend_file.rs"
